--- a/dht22/frontend/package.json
+++ b/dht22/frontend/package.json
@@ -13,7 +13,7 @@
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "webpack-manifest-plugin": "^5.0.0"
   }
 }
