--- a/dht22/frontend/public/manifest.json
+++ b/dht22/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "IOT",
+  "name": "Monitoramento de Temperatura e Umidade",
   "icons": [
     {
       "src": "favicon.ico",
