--- a/dht22/frontend/package.json
+++ b/dht22/frontend/package.json
@@ -11,6 +11,7 @@
     "apexcharts": "^3.52.0",
     "axios": "^1.7.4",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
