--- a/dht22/backend/src/main/resources/application.properties
+++ b/dht22/backend/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 server.port=8081
 spring.application.name=climatempo
-spring.datasource.url=jdbc:postgresql://192.168.1.14:5432/sensordb
-#spring.datasource.url=jdbc:postgresql://localhost:5432/sensordb
+
+# spring.datasource.url=jdbc:postgresql://192.168.1.14:5432/sensordb
+# spring.datasource.url=jdbc:postgresql://localhost:5432/sensordb
+
+# DOCKER
+# spring.datasource.url=jdbc:postgresql://docker.internal:5432/sensordb
+# DOCKER COMPOSE
+spring.datasource.url=jdbc:postgresql://192.168.1.9:5433/sensordb
+
 spring.datasource.username=postgres
 spring.datasource.password=123456
 spring.datasource.driver-class-name=org.postgresql.Driver
