--- a/dht22/frontend/.env
+++ b/dht22/frontend/.env
@@ -6,6 +6,7 @@
 # REACT_APP_API_NOW_URL=http://192.168.1.14:8081/api/dht22/now
 # REACT_APP_API_UUID_URL=http://192.168.1.14:8081/api/dht22/last
 # REACT_APP_API_COUNT_URL=http://192.168.1.14:8081/api/dht22/count
+# REACT_APP_API_STATISTICS_YEAR_URL=http://192.168.1.14:8081/api/dht22/statisticsyear
 
 GENERATE_SOURCEMAP=false
 NODE_ENV=production
@@ -18,4 +19,4 @@ REACT_APP_API_STATISTICS_URL=http://192.168.1.10:8081/api/dht22/statistics
 REACT_APP_API_NOW_URL=http://192.168.1.10:8081/api/dht22/now
 REACT_APP_API_UUID_URL=http://192.168.1.10:8081/api/dht22/last
 REACT_APP_API_COUNT_URL=http://192.168.1.10:8081/api/dht22/count
-
+REACT_APP_API_STATISTICS_YEAR_URL=http://192.168.1.10:8081/api/dht22/statisticsyear
