--- a/dht22/frontend/package.json
+++ b/dht22/frontend/package.json
@@ -8,10 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.0.0",
     "apexcharts": "^3.52.0",
     "axios": "^1.7.4",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "ipaddr.js": "^2.2.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
