--- a/dht22/backend/src/main/resources/application.properties
+++ b/dht22/backend/src/main/resources/application.properties
@@ -18,4 +18,5 @@ spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.open-in-view=false
 
-esp32.api.url=http://192.168.1.100/esp32/api/temperatura
+# esp32.api.url=http://192.168.1.100/esp32/api/temperatura
+esp32.api.url=http://192.168.1.101/esp32/api/temperatura
