--- a/dht22/backend/src/main/resources/application.properties
+++ b/dht22/backend/src/main/resources/application.properties
@@ -2,7 +2,6 @@ server.port=8081
 spring.application.name=climatempo
 
 # spring.datasource.url=jdbc:postgresql://192.168.1.14:5432/sensordb
-# spring.datasource.url=jdbc:postgresql://192.168.1.7:5432/sensordb
 spring.datasource.url=jdbc:postgresql://192.168.1.9:5432/sensordb
 
 # DOCKER
@@ -11,7 +10,8 @@ spring.datasource.url=jdbc:postgresql://192.168.1.9:5432/sensordb
 # spring.datasource.url=jdbc:postgresql://192.168.1.10:5433/sensordb
 
 # esp32.api.url=http://192.168.1.100/esp32/api/temperatura
-esp32.api.url=http://192.168.1.101/esp32/api/temperatura
+# esp32.api.url=http://192.168.1.101/esp32/api/temperatura
+esp32.api.url=http://192.168.1.102/esp32/api/temperatura
 
 spring.datasource.username=postgres
 spring.datasource.password=123456
