--- a/dht22/backend/pom.xml
+++ b/dht22/backend/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>climatempo</artifactId>
 	<version>1.0.1</version>
 	<name>climatempo</name>
-	<description>Projeto DHT22 temperatura e humidade</description>
+	<description>Projeto DHT22 temperatura e umidade</description>
 	<url/>
 	<licenses>
 		<license/>
