--- a/dht22/backend/src/main/resources/application.properties
+++ b/dht22/backend/src/main/resources/application.properties
@@ -21,3 +21,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=false
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.open-in-view=false
+
+logging.pattern.console=%-5level%msg%n
