--- a/PlatformIO/Projects/teste/platformio.ini
+++ b/PlatformIO/Projects/teste/platformio.ini
@@ -19,3 +19,10 @@ monitor_speed = 115200
 lib_ignore = 
     AsyncTCP_RP2040W
     ESPAsyncTCP-esphome
+
+lib_deps =
+    bblanchon/ArduinoJson @ ^7.3.0
+    adafruit/Adafruit Unified Sensor
+    adafruit/Adafruit SHT4x Library
+    adafruit/DHT sensor library
+    esphome/ESPAsyncWebServer-esphome
