--- a/PlatformIO/Projects/teste/platformio.ini
+++ b/PlatformIO/Projects/teste/platformio.ini
@@ -26,3 +26,5 @@ lib_deps =
     adafruit/Adafruit SHT4x Library
     adafruit/DHT sensor library
     esphome/ESPAsyncWebServer-esphome
+    OneWire
+    DallasTemperature
